Text Layount Using the Linear Layout Practice in XML!

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Happy_BirthDay_BackgroundColor">#199420</color>
 </resources>
