layout working not in time update!

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="Happy_BirthDay_BackgroundColor">#199420</color>
+    <color name="PrimaryPurple">#5B15D7</color>
 </resources>
