--- a/app/src/main/res/layout/activity_view_layout_neat_root.xml
+++ b/app/src/main/res/layout/activity_view_layout_neat_root.xml
@@ -20,21 +20,56 @@
 
 <!--    This is text view! For Guest! -->
 
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Guest list"-->
+<!--        android:textSize="50sp"-->
+<!--        android:background="@color/material_dynamic_primary20"-->
+<!--        />-->
+
+<!--&lt;!&ndash;  This is text view! Kunal  &ndash;&gt;-->
+
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="kunal"-->
+<!--        android:textSize="50sp"-->
+<!--        android:background="@color/material_dynamic_neutral95"-->
+<!--        />-->
+
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="kunal"-->
+<!--        android:textSize="50sp"-->
+<!--        android:background="@color/material_dynamic_neutral95"-->
+<!--        />-->
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="kunal"-->
+<!--        android:textSize="50sp"-->
+<!--        android:background="@color/material_dynamic_neutral95"-->
+<!--        />-->
+
+
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="today is my birthday!"-->
+<!--        android:textSize="100sp"-->
+<!--        android:background="@color/PrimaryPurple"-->
+<!--    />-->
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Guest list"
-        android:textSize="50sp"
-        android:background="@color/material_dynamic_primary20"
-        />
-
-<!--  This is text view! Kunal  -->
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="kunal"
+        android:text="Zain"
         android:textSize="50sp"
         />
+
+
+
 
 </LinearLayout>
