--- a/app/src/main/res/layout/activity_view_layout_neat_root.xml
+++ b/app/src/main/res/layout/activity_view_layout_neat_root.xml
@@ -62,11 +62,29 @@
 <!--        android:background="@color/PrimaryPurple"-->
 <!--    />-->
 
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/image"
+        android:layout_weight="1"
+        android:scaleType="fitCenter"
+    />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Zain"
+        android:text="Party is started!"
+        android:textSize="50dp"
+        android:background="@color/PrimaryPurple"
+        android:textColor="@color/white"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Let Party"
         android:textSize="50sp"
+        android:background="@color/PrimaryPurple"
+        android:textColor="@color/white"
         />
 
 
