--- a/app/src/main/res/layout/activity_view_layout_neat_root.xml
+++ b/app/src/main/res/layout/activity_view_layout_neat_root.xml
@@ -62,7 +62,7 @@
 <!--        android:background="@color/PrimaryPurple"-->
 <!--    />-->
 
-
+<!-- Image -->
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -70,6 +70,8 @@
         android:layout_weight="1"
         android:scaleType="fitCenter"
     />
+
+<!--Text View 1-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,6 +80,8 @@
         android:background="@color/PrimaryPurple"
         android:textColor="@color/white"
         />
+
+<!--Text View 2-->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -86,8 +90,5 @@
         android:background="@color/PrimaryPurple"
         android:textColor="@color/white"
         />
-
-
-
 
 </LinearLayout>
